# llm-playground

./: .gitattributes  .gitignore  Dockerfile  pyproject.toml
.devcontainer/: devcontainer-template.json
llm_playground/: generate_embedding_mean.py  generate_smiles.py  plot_tSNE.py
resources/: CBLB_inhibitors_vsF.json  CBLB_inhibitors_vsF_added_embedding_mean.json
