[tool.poetry]
name = "llm-playground"
version = "0.1.0"
description = ""
authors = ["yamasakih <yamasaki.phone@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.3"
langchain = "^0.0.130"
rdkit = "^2022.9.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
flake8 = "^6.0.0"
black = "^23.3.0"
pytest = "^7.2.2"
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
